test/libsolidity/syntaxTests/empty_struct.sol
contract test {
	struct A {}
}
// ----
// SyntaxError: Defining empty structs is disallowed.
